[gd_scene load_steps=4 format=3 uid="uid://c7yavh1fnbrh4"]

[ext_resource type="Script" path="res://scripts/control_screen.gd" id="1_un3su"]
[ext_resource type="Script" path="res://scripts/timer.gd" id="2_txnpk"]
[ext_resource type="PackedScene" uid="uid://ck1k60ghnv6yn" path="res://scenes/text.tscn" id="3_4op0k"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_un3su")

[node name="TimerArea" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.25
offset_left = -120.0
offset_right = 120.0
grow_horizontal = 2
script = ExtResource("2_txnpk")

[node name="Background" type="ColorRect" parent="TimerArea"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Timer" parent="TimerArea" instance=ExtResource("3_4op0k")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_right = 0.9

[node name="TimeButtons" type="HBoxContainer" parent="TimerArea"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
offset_bottom = 50.0
alignment = 1

[node name="Button" type="Button" parent="TimerArea/TimeButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "1:00"
metadata/value = 60

[node name="Button2" type="Button" parent="TimerArea/TimeButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "1:30"
metadata/value = 90

[node name="Button3" type="Button" parent="TimerArea/TimeButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "2:00"
metadata/value = 120

[node name="Button4" type="Button" parent="TimerArea/TimeButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "2:30"
metadata/value = 150

[node name="Button5" type="Button" parent="TimerArea/TimeButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "3:00"
metadata/value = 180

[node name="TimeControls" type="VBoxContainer" parent="TimerArea"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = 50.0

[node name="StartPause" type="Button" parent="TimerArea/TimeControls"]
layout_mode = 2
size_flags_vertical = 3

[node name="Stop" type="Button" parent="TimerArea/TimeControls"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 382.0
offset_top = 469.0
offset_right = 804.0
offset_bottom = 585.0

[node name="DisplayWindow" type="Window" parent="."]
disable_3d = true
title = "Placar Morganti"
position = Vector2i(176, 24)
size = Vector2i(800, 600)
visible = false
force_native = true

[node name="IncreaseRedScore" type="Button" parent="."]
layout_mode = 0
offset_left = 82.0
offset_top = 288.0
offset_right = 249.0
offset_bottom = 339.0

[node name="IncreaseWhiteScore" type="Button" parent="."]
layout_mode = 0
offset_left = 884.0
offset_top = 288.0
offset_right = 1061.0
offset_bottom = 339.0
